--- a/src/data/puzzles/109.md
+++ b/src/data/puzzles/109.md
@@ -8,6 +8,8 @@ category: "probability"
 ## Question
 Snow-particles are falling on the ground one after another. A particular snowflake turns out to be of type "Stellar Dendrite" with probability 'p' if its previous particle was also Stellar Dendrite, and with probability 'q' if previous one was something else. If a snowflake is picked from ground, what is the probability that it is Stellar Dendrite?
 
+![snowflake](109_stellar_dendrite.png)
+
 PS:Although no two snowflakes are alike, yet there are various crystalline structures to categorize their interesting shapes. The image depicts the most popular shape, called Stellar Dendrites, which means star-like particles with tree-like branches.
 
 ## Hint
