--- a/src/data/puzzles/1.md
+++ b/src/data/puzzles/1.md
@@ -31,3 +31,8 @@ After the shuffle, the state is reset. There are $6$ total slots with $2$ bullet
 Thus, shuffling does increase the probability of firing a bullet (from $25\%$ to $33\%$)
 
 
+<!-- 
+This puzzle is counter-intuitive. Even today, I'm puzzled by its answer.
+In real life situations, I'd expect someone to say: since we already lost one slot, the probability of firing a bullet should increase. And nobody would question this conclusion.
+This is a good reminder to always step back and think rigorously about a problem. 
+-->
