--- a/src/data/puzzles/1020.md
+++ b/src/data/puzzles/1020.md
@@ -37,4 +37,7 @@ Linearity of expectation
 
  Finally, the answer is $ E[S] = \sum_{i=1}^{99} E[X_i] = 99 * E[X_1] = 99 * 50/99 = 50$ 
 
- PS: $X_i$'s are not independent, but since all the balls are drawn randomly, the probability-distribution is identical for each draw. For instance, if you are given no information about the previous colors, and I ask 'what is the probability that 5th draw has a color change?', your answer will not depend on '5', instead the answer will be same for any index. 
+---
+
+**Note**:
+$X_i$'s are not independent, but since all the balls are drawn randomly, the probability-distribution is identical for each draw. For instance, if you are given no information about the previous colors, and I ask 'what is the probability that 5th draw has a color change?', your answer will not depend on '5', instead the answer will be same for any index. 
