--- a/src/data/puzzles/109.md
+++ b/src/data/puzzles/109.md
@@ -10,7 +10,9 @@ Snow-particles are falling on the ground one after another. A particular snowfla
 
 ![snowflake](109_stellar_dendrite.png)
 
-PS:Although no two snowflakes are alike, yet there are various crystalline structures to categorize their interesting shapes. The image depicts the most popular shape, called Stellar Dendrites, which means star-like particles with tree-like branches.
+<!-- 
+Although no two snowflakes are alike, yet there are various crystalline structures to categorize their interesting shapes. The image depicts the most popular shape, called Stellar Dendrites, which means star-like particles with tree-like branches.
+-->
 
 ## Hint
 Need to form a recursive equation of conditional probability
