--- a/src/data/puzzles/110.md
+++ b/src/data/puzzles/110.md
@@ -17,6 +17,10 @@ notice:  (1) that the king must temporarily give up his own salary to get things
 ## Solution
 Continuing from the hint, The king begins by proposing that 33 citizens have their salaries doubled to \$2, at the expense of the remaining 33 (himself included). Next, he increases the salaries of 17 of the 33 salaried voters (to \$3 or \$4) while reducing the remaining 16 to \$0. In successive turns, the number of salaried voters falls to 9, 5, 3, and 2. Finally, the king bribes three paupers with \$1 each to help him turn over the two big salaries to himself, thus finishing with a royal salary of \$63. It is not difficult to see that the king can do no better at any stage than to reduce the number of salaried voters to just over half the previous number; in particular, he can never achieve a unique salaried voter. Thus, he can do no better than \$63 for himself, and the six rounds above are optimal
 
- Note: It is possible to reach \$65 if the King could vote (watchout for variants!).
+Hence the answer is \$**63**
 
- PS: This still puzzles me to this day that even people who can't vote can have so much influence. 
+Note: It is possible to reach \$65 if the King *could vote* (that would be a variant of this puzzle).
+
+<!--
+This still puzzles me to this day that even people who can't vote can have so much influence. 
+-->
