--- a/src/data/puzzles/109.md
+++ b/src/data/puzzles/109.md
@@ -21,6 +21,17 @@ Need to form a recursive equation of conditional probability
 probability is q/(1-p+q)
 
 ## Solution
-Solution by Palak:
-Let x be the probability that a snowflake picked from ground is Stellar Dendrite. Thus, when a new snowflake is falling, with prob=x the last snowflake was Stellar Dendrite => prob the new falling snowflake is Stellar Dendrite = x*p + (1-x)*q. But, for the composition of the snowflakes on the ground to remain constant, xp+(1-x)q should be =x => x=1/(1+(1-p)/q)
+
+Let $x$ be the probability that a snowflake picked from the ground is a 'Stellar Dendrite'. Thus, when a new snowflake is falling, the last snowflake was Stellar Dendrite with probability $x$. 
+
+This means that the probability the new falling snowflake is Stellar Dendrite $= x*p + (1-x)*q$. But, for the composition of the snowflakes on the ground to remain constant, $xp+(1-x)q$ should be same as $x$ 
+
+$$\implies x = xp + q - xq = x(p-q) + q $$
+
+<!-- $$\implies x - x(p-q) = q $$ -->
+
+$$\implies x (1- (p-q)) = q $$
+<!-- \dfrac{q}{ (1- (p-q))}  -->
+$$\implies x = \dfrac{q}{ (1- p + q)} $$  
+
 This is a kind of steady state analysis.
