--- a/src/data/puzzles/13.md
+++ b/src/data/puzzles/13.md
@@ -15,11 +15,10 @@ The probability of no event in two disjoint intervals of half hours is same as p
 1/2
 
 ## Solution
-Probability of no accident in 1 hour = (prob of no accident in 1/2 hour )*(no accidents in next disjoint 1/2 hour)=p^2
+Probability of no accident in 1 hour = (prob of no accident in 1/2 hour ) * (no accidents in next disjoint 1/2 hour)=p^2
 hence 1/4=p^2, hence p=1/2, hence probability of accident in half hour=1/2
 
-Read Palak's detailed solution:
-
+Details:
 Assuming things to be memoryless, and thus disjoint time intervals to be independent, prob. of no accidents in [0,2t) = prob. of no accidents in [0,t) AND [t,2t) => 1-p(2t) = (1-p(t))^2, where p(t) is the prob. of accident in time interval of length t. Given that p(1h)=3/4 => p(0.5h)=1/2 and p(2h)=15/16.
 The way we have defined p(t) above, it is the probability that at least 1 accident happens in time interval t. Thus, as t increases, p(t) increases.
-If, instead, p(t) is defined as the fraction of vehicles that met with an accident in time interval t, then again p(2t)=p(t)+(1-p(t))*p(t)=1-(1-p(t))^2
+If, instead, p(t) is defined as the fraction of vehicles that met with an accident in time interval t, then again p(2t)=p(t)+(1-p(t)) * p(t)=1-(1-p(t))^2
