--- a/src/data/puzzles/130.md
+++ b/src/data/puzzles/130.md
@@ -15,4 +15,4 @@ Invariance
 
 
 ## Solution
-Perimeter of infected area can't increase. It stays constant or decreases. Initially maximum perimeter is 4*k if k blocks are infected. But to infect all blocks, the perimeter must increase to 4*n, k<n. This is not possible
+Perimeter of infected area can't increase. It stays constant or decreases. Initially maximum perimeter is 4 * k if k blocks are infected. But to infect all blocks, the perimeter must increase to 4 * n, $k<n$. This is not possible
