--- a/src/data/puzzles/209.md
+++ b/src/data/puzzles/209.md
@@ -21,6 +21,6 @@ Now consider the ith card and the four aces, all the orders are equally likely: 
 Hence E(Xi) = 1/5 for all i = 1 to 48
 Thus E(X) = 1 + 48/5 = 53/5 = 10.6
  
-This can be done by recursive equation  f(n) = (4/n)*1 + ((n-4)/n)*(1+f(n-1), where f(n)=expected cards to flip in a deck of n cards, but I definitely can't solve this without a computer.
+This can be done by recursive equation  f(n) = (4/n) * 1 + ((n-4)/n) * (1+f(n-1)), where f(n)=expected cards to flip in a deck of n cards, but I definitely can't solve this without a computer.
 
 A shorter explanation is to consider the 52 cards uniformly distributed over (0,1), so on average they're at k/53 for k=1,2,3,…,52. The four aces are on average at 1/5, 2/5, 3/5, 4/5. So 0.2=k/53 implies k=10.6, done!
