--- a/src/data/puzzles/22.md
+++ b/src/data/puzzles/22.md
@@ -17,6 +17,6 @@ e^Pi
 ## Solution
 This is a common placement test question. Since e^x = 1 + x…., we have e^x>1+x. Now, conveneintly choosing x = (Pi / e -1) and solving, we get e^Pi > Pi^e.
 
-Another way is to observe for f(x) = x^(1/x), differentiating: f'(x) = f(x)*(1/x^2)*(1- ln x);  f is decreasing for x > e so pi^(1/pi) < e^(1/e); hence e^(pi)> pi^(e)
+Another way is to observe for f(x) = x^(1/x), differentiating: f'(x) = f(x) * (1/x^2) * (1- ln x);  f is decreasing for x > e so pi^(1/pi) < e^(1/e); hence e^(pi)> pi^(e)
 
-Another approach is to assume e^Pi > Pi^e <=> Pi*lne > e*ln Pi <=> lne/e > lnPi/Pi. Now, notice that f(x) = lnx/x is decreasing function since f'(x) is negative in range (e<x<pi), hence above assumption is true!
+Another approach is to assume e^Pi > Pi^e <=> Pi * ln e > e * ln Pi <=> ln e/e > lnPi/Pi. Now, notice that f(x) = lnx/x is decreasing function since f'(x) is negative in range $(e<x<\pi)$, hence above assumption is true!
