--- a/src/data/puzzles/23.md
+++ b/src/data/puzzles/23.md
@@ -15,4 +15,4 @@ category: "general"
 
 
 ## Solution
-This is not a puzzle at all, this is apti/maths question, but has become quite common. You can calculate for a N=100, 73rd position is safe. For a general N, find largest m such that 2^m < N. Take t = N-2^m. Then Safe position is 2*t + 1. Please learn this formula. No need to prove it using strong induction. Proof: http://en.wikipedia.org/wiki/Josephus_problem#k.3D2
+This is not a puzzle at all, this is apti/maths question, but has become quite common. You can calculate for a N=100, 73rd position is safe. For a general N, find largest m such that 2^m < N. Take t = N-2^m. Then Safe position is $2 \cdot t + 1$. Please learn this formula. No need to prove it using strong induction. Proof: http://en.wikipedia.org/wiki/Josephus_problem#k.3D2
