--- a/src/data/puzzles/28.md
+++ b/src/data/puzzles/28.md
@@ -15,12 +15,12 @@ Conditional Probability or Baye's Theorem
 
 
 ## Solution
-Let S = Snowfall occurred, and C = Claim
+Let $S =$ Snowfall occurred, and $C =$ Claim
 
- Probability of (Snowfall given Claim) = $P(S | C) = \frac{P(C|S)*P(S)}{P(C)}$
+ Probability of (Snowfall given Claim) = $P(S | C) = \dfrac{P(C|S)*P(S)}{P(C)}$
 
  $P(C|S) = 1/6$,  $P(S) = 1/8$
 
- $P(C)$ = P(true claim) + P(False Claim) = $P(C|S)*P(S)$ + $P($ false claim | no snow) * P(no snow)
+ $P(C) = P(\text{True claim}) + P(\text{False Claim}) = (P(C|S)*P(S)) + P( \text{False claim} | \text{No snow}) * P(\text{No snow})$
 
  This is same as $[1/6*1/8]/[ 1/6*1/8 + 7/8*5/6] = 1/36$
