📝 minor content updates

--- a/src/data/puzzles/4.md
+++ b/src/data/puzzles/4.md
@@ -15,9 +15,22 @@ A lighted bulb also emits heat, and gets hot slowly (not instantaneously!)
 1
 
 ## Solution
-I think this puzzle is stupid, but it was asked to my friend in an interview, so I can't skip it. The main point is that bulb gets hot slowly when turned on. Turn on bulb 1 and 2 keeping others off. Wait for 20 minutes. Switch off 2 and turn on 3, quickly enter room and touch the bulb. If the bulb is:
+<!-- 
+I think this puzzle is silly, but it was asked to my friend in an interview, so I can't skip it.  
+-->
+The bulb gets hot slowly when turned on. Turn on bulb 1 and 2 keeping others off. Wait for 20 minutes. Switch off 2 and turn on 3, quickly enter room and touch the bulb. If the bulb is:
 
-on and hot -> switch 1 controls it
-off but hot -> 2
-on but cool -> 3
-off and cool -> 4
+| Bulb         | Inferred Switch |
+| ------------ | --------------- |
+| on and hot   | -> 1            |
+| off but hot  | -> 2            |
+| on but cool  | -> 3            |
+| off and cool | -> 4            |
+
+Following table shows this information in a grid format:
+
+|      |  On   |  Off  |
+| ---- | :---: | :---: |
+| Hot  |   1   |   2   |
+| Cold |   3   |   4   |
+
