--- a/src/data/puzzles/6.md
+++ b/src/data/puzzles/6.md
@@ -6,7 +6,9 @@ category: "probability"
 ---
 
 ## Question
-In a world where everyone wants a girl child, each family continues having babies till they have a girl. What do you think will the boy to girl ratio be eventually? (Assuming probability of having a boy or a girl is the same)
+In a world where everyone wants a girl child, each family continues having babies till they have a girl. What do you think will the boy-to-girl ratio be eventually? 
+
+Assuming probability of having a boy or a girl is the same and there is no other gender at the time of birth.
 
 ## Hint
 
@@ -15,4 +17,6 @@ In a world where everyone wants a girl child, each family continues having babie
 1:1
 
 ## Solution
-Suppose there are N couples. First time, N/2 girls and N/2 boys are born (ignoring aberrations). N/2 couples retire, and rest half try another child. Next time, N/4 couples give birth to N/4 girls and rest N/4 boys. Thus, even in second iteration, ratio is 1:1. It can now be seen that this ratio always remain same, no matter how many times people try to give birth to a favored gender.
+Suppose there are $N$ couples. First time, $N/2$ girls and $N/2$ boys are born. $N/2$ couples retire, and rest half try for another child.
+
+Next time, $N/4$ couples give birth to $N/4$ girls and $N/4$ boys. Thus, even in the second iteration, the ratio is $1:1$. It can now be seen that this ratio will always remain the same, no matter how many times people try to give birth to a favored gender.
