--- a/src/data/puzzles/111.md
+++ b/src/data/puzzles/111.md
@@ -6,9 +6,9 @@ category: "discrete"
 ---
 
 ## Question
-At a party of $N \ge 2$ people, there are some friendships. Prove that there are at-least two people with the same count of friends.
+At a party of $N$ people, there are some friendships. Prove that there are at-least two people with the same count of friends.
 
- Assume that the friendships are symmetric, i.e, if $A$ is friends with $B$, then $B$ is in turn friends with $A$. 
+Assume that $N \ge 2$ and that the friendships are symmetric, i.e, if $A$ is friends with $B$, then $B$ is in turn friends with $A$. 
 
 ## Hint
 Pigeonhole Principle
