--- a/src/data/puzzles/115.md
+++ b/src/data/puzzles/115.md
@@ -18,11 +18,46 @@ The pattern repeats after the first throw
 
 ### Method 1
 
+
+
+The intuition is that either the die is thrown only once, or more than once. In case of only once, the expected value is $3$. 
+In case of more than once, the expected value is $5$ + expected value of a new game. We need to find the expected value combining these two.
+
+Let $X$ be number of bananas eaten overall  and $Y$ = number shown on the first dice.
+
+$E_1 = E[X | \text{only once}] = E[X | Y < 6] = \dfrac{1}{5}(1+2+3+4+5) = 3$
+
+$E_2 = E[ X | \text{more than once}] = E[X | Y=6] = 5 + E[X]$
+
+now, $E[X] =  \dfrac{5}{6}\cdot E_1 + \dfrac{1}{6} \cdot E_2$
+
+$\implies E[X] = \dfrac{5}{6} \cdot 3 + \dfrac{1}{6} \cdot (5 + E[X])$
+
+Solving this equation gives $E[X] = 4$
+
+Mathematically, this is called the law of total probability, i.e, $E[ E[X|Y] ] = E[X]$. 
+
+The denominator `5` is not intuitive when solving $E_1$. For this reason, I have written the second method.
+
+<!-- 
+This uses law of total probability very silently, i.e., E( E(X|Y) ) = E(X). Suppose X expected number bananas eaten overall and Y = number shown on dice.
+E1 = E( X | Y = 1,2,3,4,5) = 3
+E2 = E( X | Y = 6) = 5 + E(X)
+now, E(X) = 5/6 * E1 + 1/6 * E2
+Solving this simple equation gives E(X) = 4 
+-->
+
+---
+
+### Method 2
+
+Here, we will solve with basic algebra, without any special techniques.
+
 Let $X$ be the total number of banans eaten.
 
-We know that $E[X]= P(X=1)\cdot 1 + P(X=2) \cdot 2 + \ldots  $
+We know that $E[X]= P(X=1)\cdot 1 + P(X=2) \cdot 2 + \ldots$
 
-For the first $5$ terms, the sum is simply $ 1/6 \cdot (1+2+3+4+5) = 15/6  $
+For the first $5$ terms, the sum is simply $1/6 \cdot (1+2+3+4+5) = 15/6$
 
 $6$th term onwards, we can see a pattern:
 
@@ -49,9 +84,9 @@ This simplifies to $E[X] = 4$
 
 ---
 
-### Method 2
+### Method 3
 
-Another method is to expand all the terms and use GP.
+Another method is to expand all the terms using linearity of expectation and then use GP sum formula.
 
 Let $X_i$ denote the number of bananas eaten on the $i$th throw.
 
@@ -60,7 +95,7 @@ Thus, $E[X] = E[\sum_{i=1}^{\infty} X_i] = \sum_{i=1}^{\infty} E[X_i]$ (using li
 
 $$ E[X_1] = \frac{1}{6} \cdot 1 + ... + \frac{1}{6}  \cdot 5 + \frac{1}{6}  \cdot 5 = \frac{20}{6} $$
 
-$ E[X_2] = P($ first die roll was 6 $) \cdot ($ terms that match $E[X_1]$)
+$E[X_2] = P(\text{ first die roll was 6} ) \cdot (\text{ terms that match} E[X_1])$
 
 $\implies E[X_2] = \dfrac{1}{6} \cdot \dfrac{20}{6}$
 
@@ -68,27 +103,5 @@ $\implies E[X_3] = \dfrac{1}{6^2} \cdot \dfrac{20}{6}$
 
 This is a Geometric Progression, with $a = 20/6, r=1/6$, the sum of infinite terms will be $\dfrac{a}{(1-r)} = \dfrac{20/6}{1-1/6} = 4$
 
----
-### Method 3
+Note: This will not work for a problem that involves a state. For instance, if the monkey could cheat upto 3 times (i.e, re-throw the dice even when it is not a "6"), and the cheating-count was reset to zero when a real "6" appears, then this method will not work.
 
-
-The intuition is that either the die is thrown only once, or more than once. In case of only once, the expected value is $3$. 
-In case of more than once, the expected value is $5$ + expected value of a new game. We need to find the expected value combining these two.
-
-Let $X$ be number of bananas eaten overall  and $Y$ = number shown on the first dice.
-
-$E_1 = E[X | \text{only once}] = E[X | Y < 6] = \dfrac{1}{5}(1+2+3+4+5) = 3$
-
-$E_2 = E[ X | \text{more than once}] = E[X | Y=6] = 5 + E[X] $
-
-now, $E[X] =  \dfrac{5}{6}\cdot E_1 + \dfrac{1}{6} \cdot E_2 = 4$
-
-Mathematically, this is called the law of total probability, i.e, $E[ E[X|Y] ] = E[X]$. 
-
-<!-- 
-This uses law of total probability very silently, i.e., E( E(X|Y) ) = E(X). Suppose X expected number bananas eaten overall and Y = number shown on dice.
-E1 = E( X | Y = 1,2,3,4,5) = 3
-E2 = E( X | Y = 6) = 5 + E(X)
-now, E(X) = 5/6 * E1 + 1/6 * E2
-Solving this simple equation gives E(X) = 4 
--->
