--- a/src/data/puzzles/116.md
+++ b/src/data/puzzles/116.md
@@ -6,23 +6,151 @@ category: "probability"
 ---
 
 ## Question
-What is the expected number of coin tosses required to get n consecutive heads?
+What is the expected number of coin tosses required to get $N$ consecutive heads?
+
+Denote the term by $E_N$
 
 ## Hint
-That sum wont work! Just find the recursive relation.
+Try to find a recurrence relation between $E_{N}$ and $E_{N-1}$.
 
 ## Answer
-En = 2En−1 + 2, giving En = 2^(n+1)-2
+Recurrence form: $E_N = 2E_{N-1} + 2$; 
+Closed form: $E_N = 2^{N+1}-2$
 
 ## Solution
-Define let Xn = number of tosses to get n consecutive heads; E(Xn) = expected number of coin tosses we require from now on, to get n consecutive heads. Recall the law of total probability,
-E(Xn) = E ( E(Xn) |Y) )
-where Y = current toss (either Head or tail).
-En = (1/2)( E(Xn) | H) + (1/2)( E(Xn) | T)
-En = (1/2)( E(X(n-1)) + 1 |H) + (1/2)( E(Xn) + 1 | T)
+
+### Method 1
+
+We can simply reuse the method from problem ["Innocent Monkey"](115) (the law of total probability)
+
+
+Define let $X_N$ = number of tosses to get $N$ consecutive heads 
+
+$E_N$ = expected number of coin tosses we require from now on, to get $N$ consecutive heads.
+
+<!-- 
+Recall the law of total probability,
+$E[X_N] = E [ E[X_N |Y] ]$
+where $Y$ = current toss (either Head or tail).
+
+$E[X_N] = \frac{1}{2} ( E[X_N] | H) + \frac{1}{2} ( E[X_N] | T)$ 
+-->
+
+Note that if we already have $N-1$ Heads, then with probability (1/2), we can get $N$ consecutive heads, and with probability (1/2), we get a tail, and the state is reset.
+
+$E_N =  \frac{1}{2}( E_{(N-1)} + 1) + \frac{1}{2}(E_{N-1} + 1 + E_N)$
+
 the extra 1 is because we just used a toss
-En = 1 + (1/2) * E(n-1) + (1/2) * En
+
+$E_N = 2E_{N-1} + 2$
+
+This is a recurrence relation, and a good enough solution. But we can solve this into its closed form too.
+
+The right way to solve this is using generating functions or characteristic equations.
+But we will use a more intuitive approach.
+
+We can tell it is an exponential function, involving powers of $2$. Suppose $E_N = C_1 \cdot 2^{N} + C_2$
+
+Assume that $E_0 = 0$ (no tosses needed) $\implies 0 = C_1 + C_2$
+
+And $E_1 = 2$ (refer to method 2, step 1) $\implies 2 = C_1\cdot 2 + C_2$
+
+Simplify to get $C_1 =2, C_2 = -2$
+
+
+<!-- 
 This above equation is logical and should be written directly.
-=> En = 2E(n-1) + 2
+=> $En = 2E(n-1) + 2$ 
+-->
+
+This simplifies to $E_N = 2^{(N+1)}-2$
+
+<!-- 
+
+We can solve this recurrence relation using the method of characteristic equation.
+
+**Step 1: Homogenous Solution**
+This is the solution to the recurrence relation without the constant term.
+
+$f(N) = 2 \cdot f({N-1})$
+
+This is simply given by $f(N) =C\cdot 2^N$ where $C$ is a constant.
+
+**Step 2: Particular Solution**
+Next, we need to find a particular solution to the original non-homogeneous equation. We can guess a solution of the form 
+$f(N) = A$ where $A$ is a constant. Substituting this into the original equation gives: 
+
+$A = 2A + 2 \implies A = -2$
+
+Hence the particular solution is $f(N)=-2$
+
+**Step 3: General Solution**
+The general solution to the original equation is the sum of the homogeneous solution and the particular solution:
+
+
+$f(N) = C \cdot 2^{N} - 2$
+
+Assume that $E_0 = 0$ (no tosses needed), and solve for $C$
+
+$0 = C + 2 \implies C = 2$
+
+
+Hence $E_N = 2 * 2^{N}-2 = 2^{N-2} - 2$
+
+ -->
+
+---
+
+### Method 2
+
+This approach is more rigorous and algebraic.
+
+Let us solve a simpler question first. 
+
+**Step 1**: What's the expected number of coin tosses to get $N=1$ heads?
+
+There are two possibilities:
+
+1. We get a head in the first toss itself. This happens with probability $1/2$.
+2. We get a tail in the first toss, and then we start a new game, where number of chance is 1 more than the expected value.
+
+
+$E_1 = \dfrac{1}{2} \cdot 1 + \dfrac{1}{2} \cdot (1 + E_1)$
+
+Simplify to get $E_1 = 2$
+
+**Step 2**: What's the expected number of coin tosses to get $N=2$ consecutive heads?
+
+There are three possibilities:
+1. We can get two heads in the first two tosses itself. This happens with probability $1/4$, and takes 2 tosses.
+2. We can get a tail in the first toss, and then we start a new game, where number of attempts is 1 more than the expected value.
+3. We can get a heads in the first toss, and then tails in second. Then we start a new game, where number of attempts is 2 more than the expected value.
+
+$E_2 = \dfrac{1}{4} \cdot 2 + \dfrac{1}{2} \cdot (1 + E_2) + \dfrac{1}{4} \cdot (2 + E_2)$
+
+Simplify to get $E_2 = 6$
+
+**Step 3**: What's the expected number of coin tosses to get $N$ consecutive heads?
+
+There are $N+1$ possibilities. 
+
+1. We can get $N$ heads in the first $N$ tosses itself. This happens with probability $1/2^N$, and takes $N$ tosses.
+2. We can get a tail in the first toss, and then we start a new game, where number of attempts is 1 more than the expected value.
+3. We can get a heads in the first toss, and then tails in second. Then we start a new game, where number of attempts is 2 more than the expected value.
+4. $\vdots$
+5. We can get $N-1$ heads in the first $N-1$ tosses, and then a tail in the $N^{th}$ toss. Then we start a new game, where number of attempts is $N$ more than the expected value.
+
+
+$E_N = \dfrac{1}{2^N} \cdot N + \dfrac{1}{2} \cdot (1 + E_N) + \dfrac{1}{2^2} \cdot (2 + E_N) + \ldots + \dfrac{1}{2^{N}} \cdot (N + E_N)$
+
+
+<!-- $ =  \dfrac{1}{2^N} \cdot [ N + 2^{N-1}(1 +E[X_N])  + \ldots + (N + E[X_N])]$ -->
+
+<!-- $=  \dfrac{1}{2^N} \cdot [ N + E[X_N](1 + ... + 2^{N-1} )]  + [\dfrac{1}{2} + \dfrac{2}{2^2} \ldots + \dfrac{N}{2^N}]$ -->
+
+*This looks quite complex, but be assured that this can be simplified. I did not spend time on solving this.*
+
+Simplify to get $E_N = 2^{N+1}-2$
+
 
 This simplifies to 2^(n+1)-2 as E0 = 0. (not required)
