--- a/src/data/puzzles/117.md
+++ b/src/data/puzzles/117.md
@@ -6,22 +6,50 @@ category: "probability"
 ---
 
 ## Question
-A chess tournament has K levels and 2^K players with skills 1 > 2 > ... >2^K. At each level, random pairs are formed and one person from each pair proceeds to next level. When two opponents play, the one with better skills always wins. What is the probability that players 1 and 2 will meet in the final level?
+A chess tournament has $K$ levels and $N = 2^K$ players with skills $P_1 > P_2 > ... >P_{N}$. At each level, random pairs are formed and one person from each pair proceeds to the next level. When two opponents play, the one with the better skills always wins. What is the probability that players $P_1$ and $P_2$ will meet in the final level?
 
 ## Hint
-Consider K=1 (2 players), the probability is 1.
-Consider K=2 (4 players); first round can be in following ways:
-1-2 | 3-4
-1-3 | 2-4
-1-4 | 2-3
-They don't meet in finals in first case (of 3). Thus, for K=2, the probability that they meet is 2/3.
-I assure you that this probability gets close to 1/2 for large K. Just notice that if 1 and 2 meet before final, they dont meet at final.
+if two players meet before the final, they don't meet at the final.
 
 ## Answer
-N/2(N-1)
+$\dfrac{N}{2(N-1)}$
 
 ## Solution
-If you worked out conditional probability, that is fine. Here we present the combinatorial solution. Imagine the levels proceed in any random way such that player X and Y appear for final level. This can be imagined as N players getting partitioned into two groups of N/2 players each, with player X topping in first group and player Y in second. The best player of each partition reaches final. We only need to ensure that above partition separates player 1 from 2. The probability that a random partition separates 1 & 2 is (N/2) / (N-1) (how?)
+Consider $K=1, N=2$, the probability is 1.
 
-Here is how: for creating a partition to separate them, we pick (N/2) people from N, wishing to take player 1, but not player 2. 
+Consider $K=2, N=4$; the first round can be in the following ways:
+
+1. $(P_1 \times P_2 ) \times ( P_3 \times P_4 )$
+2. $(P_1 \times P_3 ) \times ( P_2 \times P_4 )$
+3. $(P_1 \times P_4 ) \times ( P_2 \times P_3 )$
+
+They don't meet in finals in the first case (out of a total of three). Thus, for $K=2, N=4$, the probability that they meet is $2/3$.
+<!-- 
+I assure you that this probability gets close to 1/2 for large K. 
+ -->
+
+Assume that instead of forming random pairs at each level, we have already constructed a "tournament tree", which is a binary tree. At the bottom of this structure, we have the initial $N$ players. Each node represents the match between the two children (players), and the value of each node is the player who won that match. The value of the top-level root node is the overall winner of the tournament.
+
+![tree](117_tree.drawio.png)
+
+With this image, we can see the whole tournament is deterministic and only depends on the initial arrangement of players (at the bottom level).
+We also notice that the two players who reach the final level are the best players of the left half of the tree and the right of the tree (respectively).
+
+Imagine $N$ players getting partitioned into two groups of $N/2$ players each, with player $P_1$ topping in the first group and player $P_2$ in the second. The best player of each partition reaches the final. The probability that a random partition separates player $P_1$ from $P_2$ is $\dfrac{(N/2)}{(N-1)}$
+
+Here's how: There are $N$ empty slots in a sequence at the bottom layer of the tournament tree.
+We can start assigning players from $P_1$.
+Suppose $P_1$ is assigned to a slot in the first half. For $P_2$, there are total $N-1$ slots remaining, and $N/2$ are in a new group (that does not contain $P_1$). Hence, there are $(N/2)$ favorable choices and $N-1$ total choices.
+
+Hence the probability is $\dfrac{N}{2(N-1)}$
+
+<!--
+Intuitively, this means for creating a partition to separate them, we pick $(N/2)$ people from $N$, wishing to take player 1, but not player 2.  
+-->
+---
+
+Note: The question says that we are forming random pairs at each level. But that is equivalent to retroactively constructing the bottom-layer of the tournament tree, in any desirable fashion.
+
+For example, consider at the $i$th level, we randomly decide to match $P_j$ with $P_k$, even though they were not siblings in the tree at that level.
+That's fine, we can modify the tree such that now $P_j$ and $P_k$ are siblings, while keeping the entire branch below each of those nodes intact.
 
