--- a/src/data/puzzles/108.md
+++ b/src/data/puzzles/108.md
@@ -6,17 +6,30 @@ category: "probability"
 ---
 
 ## Question
-A and B are in a team called AB, playing against C. If AB team wins it gets Rs 3, nothing otherwise.
+A and B are in a team called AB, playing against C. If AB team wins they win Rs 3, nothing otherwise.
 
-Game is: A and B are placed in 2 separate rooms far away. A will toss a coin and B will also toss a coin; A will have to guess outcome of B's toss and B will guess A's. If both guesses are right, team AB wins Rs 3, nothing otherwise.
-Should they play the game, by giving Rs 1 in start to C.
+The Game: A and B are placed in 2 separate rooms far away. A will toss a coin and B will also toss a coin; A will have to guess the outcome of B's toss and B will guess A's. If both guesses are right, team AB wins Rs 3, nothing otherwise.
+Should they play the game, by paying Rs 1 at the start?
 
 ## Hint
- Winning probability in not 1/4. They can make strategy before game.
+The winning probability is not 1/4. They can make a strategy before the game.
 
 
 ## Answer
 1/2
 
 ## Solution
- They will have same coin with probability 1/2. They can speak their own coin's face as the guess of other's. They win game with probability 1/2. Pay off will be positive, and hence they should play!
+Let's list down all the possibilities.
+
+| A   | B   |
+| --- | --- |
+| H   | H   |
+| H   | T   |
+| T   | H   |
+| T   | T   |
+
+Observe that $2$ out of $4$ times, their coins have the same face, i.e. either both heads or both tails.
+
+They can speak their own coin's face as their guess. They win the game with a probability of $1/2$. 
+
+The pay-off will be positive ($1/2 \cdot 3 - 1 = 0.5$), and hence they should play this game.
