--- a/src/data/puzzles/116.md
+++ b/src/data/puzzles/116.md
@@ -44,12 +44,12 @@ the extra 1 is because we just used a toss
 
 $E_N = 2E_{N-1} + 2$
 
-This is a recurrence relation, and a good enough solution. But we can solve this into its closed form too.
+This is a recurrence relation and a good enough solution. But we can solve this into its closed form too.
 
-The right way to solve this is using generating functions or characteristic equations.
+The right way to solve this is by using generating functions or characteristic equations.
 But we will use a more intuitive approach.
 
-We can tell it is an exponential function, involving powers of $2$. Suppose $E_N = C_1 \cdot 2^{N} + C_2$
+We can tell it is an exponential function, involving powers of $2$ because the $N$th term is about 2 times $N-1$th term. Suppose $E_N = C_1 \cdot 2^{N} + C_2$
 
 Assume that $E_0 = 0$ (no tosses needed) $\implies 0 = C_1 + C_2$
 
@@ -124,7 +124,7 @@ Simplify to get $E_1 = 2$
 There are three possibilities:
 1. We can get two heads in the first two tosses itself. This happens with probability $1/4$, and takes 2 tosses.
 2. We can get a tail in the first toss, and then we start a new game, where number of attempts is 1 more than the expected value.
-3. We can get a heads in the first toss, and then tails in second. Then we start a new game, where number of attempts is 2 more than the expected value.
+3. We can get a heads in the first toss, and then tails in the second. Then we start a new game, where number of attempts is 2 more than the expected value.
 
 $E_2 = \dfrac{1}{4} \cdot 2 + \dfrac{1}{2} \cdot (1 + E_2) + \dfrac{1}{4} \cdot (2 + E_2)$
 
@@ -152,5 +152,51 @@ $E_N = \dfrac{1}{2^N} \cdot N + \dfrac{1}{2} \cdot (1 + E_N) + \dfrac{1}{2^2} \c
 
 Simplify to get $E_N = 2^{N+1}-2$
 
+---
 
-This simplifies to 2^(n+1)-2 as E0 = 0. (not required)
+### Method 3 (for $N=1$ only)
+
+We can use linearity of expectation for $N=1$
+
+Let $X$ be the number of tosses required to get 1 head. 
+
+Define indicator variable, $X_i = 1$ if no Heads appeared before the $i$th step and $0$ otherwise. Once we get a "heads", we stop tossing, so all the later $X_i=0$.
+
+Note that $X = \sum_{i=1}^{\infty} X_i$
+
+$E[X] = E[\sum_{i=1}^{\infty} X_i] = \sum_{i=1}^{\infty} E[X_i]$ (using linearity of expectation)
+
+$E[X_1] = 1 \cdot \dfrac{1}{2} + 1 \cdot \dfrac{1}{2} = 1$ (if heads, then also count 1, if tails, then also count 1)
+
+$E[X_2] = P(\text{First toss was Tails}) \cdot  1$
+
+$E[X_3] = P(\text{First two toss were Tails}) \cdot 1 = \dfrac{1}{4}$
+
+$\vdots$
+
+$E[X] = \sum_{i=1}^{\infty} E[X_i] = 1 + \dfrac{1}{2} + \dfrac{1}{4} + \ldots = 2$
+
+Okay, same answer as before.
+
+*Unfortunately, I'm unable to extend this solution to $N=2$ and further because of the presence of the state.*
+
+---
+
+### Method 4 (for $N=1$ only)
+
+This method uses the basic definition of expected value.
+
+$E[X] = P(X=1) \cdot 1 + P(X=2) \cdot 2 + \ldots$
+
+$P(X=1) = 1/2$ (because we can get a head in the first toss itself)
+
+$P(X=2) = 1/4$ (first tails, and second hands)
+
+$\vdots$
+
+$E[X] = \dfrac{1}{2} \cdot 1 + \dfrac{1}{2^2} \cdot 2 + \dfrac{1}{2^3} \cdot{3}$
+
+This is an Arithmetic Geometric Progression of type $a, (a+d)r, (a+2d)r^2, \ldots, [a + (n-1)d] r^{n-1}$ with $a=0, d=1, r=1/2$
+
+The sum of infinite such terms is $S =  \dfrac{a}{1-r} + \dfrac{dr}{(1-r)^2} = \dfrac{1/2}{1/4} = 2$
+
